--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
 body {
   background-color: purple;
 }
+
+.img-container {
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+}
